build: prevent warnings in tests (#825)